[package]
name = "geo-svg"
version = "0.1.0"
authors = ["Bronson Brown-deVost <bronsonbdevost@aim.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo-normalized = { git = "https://gitlab.com/bronsonbdevost/rust-geo-normalized", branch = "master" }
geo-types = "0.4"
geo-booleanop = { git = "https://github.com/21re/rust-geo-booleanop", branch = "master" }
num-traits = "0.2.11"
flo_curves = "0.3.1"
svgtypes = "0.5"
xml-rs = "0.8.2"
