[package]
name = "geo-svg-io"
description = "Functionality to convert between SVG and geo-types"
version = "0.1.1"
authors = ["Bronson Brown-deVost <bronsonbdevost@aim.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/bronsonbdevost/rust-geo-svg"
repository = "https://gitlab.com/bronsonbdevost/rust-geo-svg"
keywords = ["geo", "SVG", "gis"]
categories = ["graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo-normalized = "0.1"
geo-types = "0.4"
geo-booleanop = "0.2.1"
num-traits = "0.2.11"
flo_curves = "0.3.1"
svgtypes = "0.5"
xml-rs = "0.8.2"
